# mamrot

./: .gitignore  LICENSE  README.md  pyproject.toml
mamrot/: __init__.py  __main__.py  main.py
mamrot/core/: cutter.py  ffmpeg_bootstrap.py  models.py  transcriber.py
mamrot/ui/: audio_preview.py  cutter_tab.py  editor_tab.py  theme.py  transcribe_tab.py
