[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mamrot"
version = "0.1.0"
description = "Desktop audio/video transcriber & cutter powered by faster-whisper + ffmpeg"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "faster-whisper>=1.0.3",
]

[project.scripts]
mamrot = "mamrot.main:main"

[tool.setuptools.packages.find]
include = ["mamrot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
